--- a/cerro-tapado/index.html
+++ b/cerro-tapado/index.html
@@ -8,15 +8,15 @@
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="multiple-scenes ">
+<body class="multiple-scenes view-control-buttons">
 
 <div id="pano"></div>
 
 <div id="sceneList">
   <ul class="scenes">
     
-      <a href="javascript:void(0)" class="scene" data-id="0-entrada">
-        <li class="text">entrada</li>
+      <a href="javascript:void(0)" class="scene" data-id="0-vista-entrada">
+        <li class="text">vista entrada</li>
       </a>
     
       <a href="javascript:void(0)" class="scene" data-id="1-vista-frontal">
