--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
   <header>
-    <h1>Tours Virtuales elaborado por jose lazo</h1>
+    <h1>Tours Virtuales elaborado por Jose lazo</h1>
     <p>Explora nuestros espacios en 360°</p>
   </header>
 
@@ -102,12 +102,14 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>Escribe aquí tus datos de contacto.</p>
+    <p>Cel: 00-507-6473-9133<p>
+    <p>E-mail: joselazo2@gmail.com</p>
   </section>
 
   <footer>
-    &copy; 2025 Mi Empresa de Tours Virtuales
+    &copy; 2025 Ing. Jose Lazo
   </footer>
 
 </body>
 </html>
+
