--- a/cerro-tapado/index.html
+++ b/cerro-tapado/index.html
@@ -72,6 +72,7 @@
   <img class="icon" src="img/minus.png">
 </a>
 
+<script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
 <script src="vendor/screenfull.min.js" ></script>
 <script src="vendor/bowser.min.js" ></script>
 <script src="vendor/marzipano.js" ></script>
