--- a/cerro-tapado/index.html
+++ b/cerro-tapado/index.html
@@ -72,10 +72,11 @@
   <img class="icon" src="img/minus.png">
 </a>
 
+<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+<script src="vendor/hammer.min.js"></script>
 <script src="vendor/screenfull.min.js" ></script>
 <script src="vendor/bowser.min.js" ></script>
 <script src="vendor/marzipano.js" ></script>
-<script src="vendor/hammer.min.js"></script>
 
 
 <script src="data.js"></script>
