--- a/cerro-tapado/index.html
+++ b/cerro-tapado/index.html
@@ -71,10 +71,10 @@
 <a href="javascript:void(0)" id="viewOut" class="viewControlButton viewControlButton-6">
   <img class="icon" src="img/minus.png">
 </a>
-
 <script src="vendor/hammer.min.js"></script>
 <script src="vendor/screenfull.min.js" ></script>
 <script src="vendor/bowser.min.js" ></script>
+controls.registerMethod('pinch', new Marzipano.PinchZoomControlMethod(), true);
 <script src="vendor/marzipano.js" ></script>
 
 
