--- a/index.html
+++ b/index.html
@@ -343,7 +343,6 @@
       <h2><i class="fas fa-map-marked-alt"></i> Tours Virtuales Disponibles</h2>
       <div class="tour-container">
         <div class="tour">
-          <span class="tour-badge">Nuevo</span>
           <iframe src="https://joselaz.github.io/lugares/barranco-adentro/index.html" allowfullscreen loading="lazy"></iframe>
           <h3>Tour Barranco Adentro</h3>
         </div>
@@ -351,6 +350,11 @@
           <iframe src="https://joselaz.github.io/lugares/cerro-tapado/index.html" allowfullscreen loading="lazy"></iframe>
           <h3>Tour Cerro Tapado</h3>
         </div>
+        <div class="tour">
+          <iframe src="https://joselaz.github.io/lugares/bigcreek/index.html" allowfullscreen loading="lazy"></iframe>
+          <h3>Tour BigCreeK</h3>
+        </div>
+
         <!-- Espacio para futuros tours -->
         <div class="tour">
           <div style="width:100%;height:220px;background:#f0f0f0;display:flex;align-items:center;justify-content:center;">
