Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -300,21 +300,23 @@
       <h2><i class="fas fa-satellite"></i> Enlace Directo</h2>
       <div class="contact-info">
         <div class="contact-item">
-          <i class="fas fa-phone-volume"></i>
-          <p><strong>Llamadas / WhatsApp</strong><br>+507 6473-9133</p>
+        <i class="fas fa-phone-volume"></i>
+         <p><strong>Llamadas / WhatsApp</strong><center><a href="tel:+50764739133" class="contact-item"></a></center><br>+507 6473-9133</p>
         </div>
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
-          <p><strong>Email Profesional</strong><br>joselazo2@gmail.com</p>
+          <p><strong>Email Profesional</strong><center><a href="mailto:joselazo2@gmail.com" class="contact-item">
+</a></center><br>joselazo2@gmail.com</p>
         </div>
       </div>
     </section>
   </main>
-
+  
   <footer style="text-align: center; padding: 5rem 0; border-top: 1px solid #222; margin-top: 2rem;">
     <p style="opacity: 0.4; font-size: 0.9rem; letter-spacing: 1px;">&copy; 2026 Ing. Jose Lazo | Bocas del Toro, Panamá</p>
   </footer>
 
 </body>
 </html>
+
 
